--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=teste
 
 # Configuração do PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/meubanco
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração do Hibernate/JPA
@@ -15,10 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
-#
-#spring.elasticsearch.rest.uris=http://localhost:9200
-#spring.elasticsearch.username=elastic
-#spring.elasticsearch.password=changeme
 
 # Logstash
 logging.level.root=INFO
