fix actuator health

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Nome da aplicação
 spring.application.name=teste
+server.servlet.context-path=/app-florentino
+server.port=8080
 
 # Configuração do PostgreSQL
 spring.datasource.url=${SPRING_DATASOURCE_URL}
@@ -22,3 +24,6 @@ logging.level.com.example=INFO
 
 # Logback JSON para Logstash
 logging.file.name=logs/spring-logs.log
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
